small changes and refactors